# ddia_projects

./: Outline.csv  Outline.xlsx  README.md
1-url-shortener/: README.md  go.mod
1-url-shortener/cmd/shortener/: main.go
1-url-shortener/internal/api/: handlers.go  helpers.go  router.go  types.go
1-url-shortener/internal/base62/: base62_utils.go  decode.go  encode.go  validate.go
1-url-shortener/internal/db/: base62.go  db.go  model.go  utils.go
1-url-shortener/internal/service/: base62.go  shortener.go  shortener_test.go
2-multi_model_blog_system/: README.md  config.py  data.json  docker-compose.yml  main.py  mise.toml  pyproject.toml
2-multi_model_blog_system/datagen/: data_generator.py
2-multi_model_blog_system/model/: comment.py  like.py  post.py  user.py
2-multi_model_blog_system/repository/: abstract_repository.py  mongo.py  neo4j.py  postgres.py
2-multi_model_blog_system/typedefs/: json_types.py  mongo_types.py
